# image-facing-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.json
.github/workflows/: gitleaks.yml
app/: auth.py  classifier.py  config.py  db.py  deps.py  embed.py  errors.py  images.py  main.py  models.py  request_input.py  service.py  store.py
app/routes/: admin.py  health.py  label.py  playground.py  predict.py  projects.py  try_ui.py
app/templates/: admin.html  playground.html  try.html
docs/: README.md  admin.md  api.md  architecture.md  client-integration.md  database.md  deploy.md  env.md  go-public.md  model.md  multi-tenant.md  overview.md  roadmap.md  security.md  usage.md
examples/react-client/: .env.example  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml
examples/react-client/src/: App.tsx  api.ts  styles.css  vite-env.d.ts
models/: .gitkeep
scripts/: export_dinov2_onnx.py  import_labels.py
tests/: conftest.py  test_admin_ops.py  test_api.py  test_classifier.py  test_embed.py
